# Flask-project

./: .env.local  .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  wishare.py  Техническое задание.docx
.github/workflows/: docker.yml
app/: app.py  main.py
app/core/: config.py
app/core/dependencies/: constructors.py  flask.py
app/lib/db/: user.py  wish_list.py
app/lib/forms/: __init__.py  user.py  wishlists.py
app/lib/models/: __init__.py  user.py
app/routers/: router.py  user.py  wish_list.py
app/templates/: base.html  index.html  profile.html
deployment/: Dockerfile  docker-compose.local.yml  docker-compose.yml
docs/: Пояснительная записка.docx  презентация_flask.pptx
migrations/: env.py
migrations/versions/: 2025_04_11_1906-44d3c60e9735.py  2025_04_13_1728-90e00c8059a2.py  2025_04_15_1348-9ce39c326429.py  2025_04_15_1428-6adacacfcc4e.py  2025_04_15_2122-865dccb26feb.py  2025_04_16_1455-7601fcfd91ec.py  2025_04_16_1459-e56db2a0a598.py  2025_04_20_1406-b318ecd7dff2.py  2025_04_20_1454-0ceaf42e882f.py  2025_04_20_1656-08026628f781.py  2025_04_21_1123-af3ff5e4cf4a.py
static/css/: style.css
templates/: base.html  start_window.html
wishare/: app.py  main.py  wishare.py
wishare/data/: __all_models.py  users.py  wish_lists.py
wishare/db/: wishare.db
wishare/forms/: user.py  wishlists.py
wishare/routers/: router.py  user.py  wish.py  wish_list.py
wishare/templates/: base.html  create_wish.html  create_wishlist.html  login.html  profile.html  register.html  show_wishlist.html  start_window.html
(+18 files in other folders)
